force-app/main/default/objects/BrillioFC__PermissionSet_Match__c/BrillioFC__PermissionSet_Match__c.object-meta.xml
<CustomObject>
    <label>PermissionSet Match</label>
    <nameField>
        <displayFormat>Match-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PermissionSet Matches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>