force-app/main/default/objects/BrillioFC__PermissionSet_Match__c/fields/BrillioFC__Matching_PermissionSet__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Matching_PermissionSet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matching PermissionSet</label>
    <referenceTo>BrillioFC__PermissionSet_Detail__c</referenceTo>
    <relationshipLabel>PermissionSet Matches (Matching PermissionSet)</relationshipLabel>
    <relationshipName>PermissionSet_Matches1</relationshipName>
    <type>Lookup</type>
</CustomField>