force-app/main/default/objects/BrillioFC__PermissionSet_Match__c/fields/BrillioFC__Percentage__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Percentage__c</fullName>
    <label>Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>