force-app/main/default/objects/BrillioFC__PermissionSet_Match__c/fields/BrillioFC__PermissionSet_Name__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__PermissionSet_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PermissionSet Name</label>
    <referenceTo>BrillioFC__PermissionSet_Detail__c</referenceTo>
    <relationshipLabel>PermissionSet Matches</relationshipLabel>
    <relationshipName>PermissionSet_Matches</relationshipName>
    <type>Lookup</type>
</CustomField>